src/parser/snapshots/enderpy__parser__parser__tests__parse_break_continue-2.snap
---
source: src/parser/parser.rs
description: continue
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        Continue(
            Continue {
                node: Node {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
}
