src/parser/snapshots/enderpy__parser__parser__tests__parse_break_continue.snap
---
source: src/parser/parser.rs
description: break
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        Break(
            Break {
                node: Node {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
}
