src/parser/snapshots/enderpy__parser__parser__tests__parse_call-8.snap
---
source: src/parser/parser.rs
description: "func(a,)"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        ExpressionStatement(
            Call(
                Call {
                    node: Node {
                        start: 0,
                        end: 8,
                    },
                    func: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 4,
                            },
                            id: "func",
                        },
                    ),
                    args: [
                        Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "a",
                            },
                        ),
                    ],
                    keywords: [],
                    starargs: None,
                    kwargs: None,
                },
            ),
        ),
    ],
}
