src/parser/snapshots/enderpy__parser__parser__tests__parse_call.snap
---
source: src/parser/parser.rs
description: a()
---
Module {
    node: Node {
        start: 0,
        end: 3,
    },
    body: [
        ExpressionStatement(
            Call(
                Call {
                    node: Node {
                        start: 0,
                        end: 3,
                    },
                    func: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    args: [],
                    keywords: [],
                    starargs: None,
                    kwargs: None,
                },
            ),
        ),
    ],
}
